--- a/php/generate-short-url/composer.json
+++ b/php/generate-short-url/composer.json
@@ -5,6 +5,7 @@
     "license": "ISC",
     "authors": [],
     "require": {
-        "php": ">=8.0.0"
+        "php": ">=8.0.0",
+        "appwrite/appwrite": "7.0.*"
     }
 }
