--- a/dotnet/WipeAppWriteBucket/WipeAppWriteBucket.csproj
+++ b/dotnet/WipeAppWriteBucket/WipeAppWriteBucket.csproj
@@ -10,8 +10,10 @@
   <ItemGroup>
     <None Remove="Appwrite" />
     <None Remove=".gitignore" />
+    <None Remove="Newtonsoft.Json" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Appwrite" Version="0.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 </Project>
