some more changes

--- a/dotnet/WipeAppWriteBucket/WipeAppWriteBucket.csproj
+++ b/dotnet/WipeAppWriteBucket/WipeAppWriteBucket.csproj
@@ -11,9 +11,13 @@
     <None Remove="Appwrite" />
     <None Remove=".gitignore" />
     <None Remove="Newtonsoft.Json" />
+    <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Appwrite" Version="0.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
