--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ## Open-Runtime specific rules
 code.tar.gz
+appwrite.json
 
 ## General rules, taken from https://gist.github.com/octocat/9257657
 
