Added FETCH library and resolved try...catch issue

--- a/node/generate_website_screenshot/package.json
+++ b/node/generate_website_screenshot/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "chromedriver": "^106.0.1",
+    "node-fetch": "^3.2.10",
     "selenium-webdriver": "^4.5.0"
   }
 }
