Finish readme generation script

--- a/.github/workflows/examples-list-workflow/package.json
+++ b/.github/workflows/examples-list-workflow/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "markdown-table": "^3.0.3"
+  }
 }
