--- a/dart/deepgram_Topic_Detection/pubspec.yaml
+++ b/dart/deepgram_Topic_Detection/pubspec.yaml
@@ -4,11 +4,7 @@ version: 1.0.0
 publish_to: "none"
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: '>=2.14.0 <3.0.0'
 
 dependencies:
   http: ^0.13.5
-
-
-dev_dependencies:
-  lints: ^2.0.1
