included the tweetinviapi in the csproj file.

--- a/dotnet/sendMessage/sendMessage.csproj
+++ b/dotnet/sendMessage/sendMessage.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+  <PackageReference Include="TweetinviAPI" Version="5.0.4" />
+
+  </ItemGroup>
+
 </Project>
