--- a/kotlin/sendMessage/deps.gradle
+++ b/kotlin/sendMessage/deps.gradle
@@ -1,4 +1,4 @@
 dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
-    implementation("com.chromasgaming:ktweet:1.3.0")
+    implementation 'com.chromasgaming:ktweet:1.3.0'
 }
