--- a/python/text-to-speech/requirements.txt
+++ b/python/text-to-speech/requirements.txt
@@ -1,4 +1,5 @@
 boto3==1.28.9
-azure-cognitiveservices-speech==1.24.0
 google-cloud-texttospeech==2.14.1
+azure-cognitiveservices-speech==1.24.0
 parameterized==0.9.0
+requests==2.31.0
