--- a/dotnet/sendMessage/sendMessage.csproj
+++ b/dotnet/sendMessage/sendMessage.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
   <PackageReference Include="TweetinviAPI" Version="5.0.4" />
+  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 
   </ItemGroup>
 
