--- a/java/compress_image/deps.gradle
+++ b/java/compress_image/deps.gradle
@@ -1,7 +1,5 @@
 dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.tinify:tinify:1.8.3'
-    implementation('io.kraken.client:client:1.1.2'){
-        exclude module: 'javax.inject'
-    }
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'
 }
